prodMetadata/src/objects/Give_Request__c.object
<CustomObject>
    <description>Connects applicants to give</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Street Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <formula>Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Id__c</fullName>
        <formula>CASESAFEID(Applicant__c)</formula>
        <label>Applicant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <formula>Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Applicant__r.FirstName</formula>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <description>Should be a confirmed member veteran only.</description>
        <inlineHelpText>Should be a confirmed member veteran only.</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Give Requests</relationshipLabel>
        <relationshipName>Give_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <label>Attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Checks Tentative Number Remaining on Give Instance to see if quantity requested is available.</description>
        <formula>IF(  Give_Instance__r.Tentative_Number_Remaining__c - Units_Requested__c  &gt;= 0,&quot;Available&quot;,&quot;Unavailable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks Tentative Number Remaining on Give Instance to see if quantity requested is available.</inlineHelpText>
        <label>Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_21__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the applicant confirmed age 21+ (only relevant on 21+ gives)</description>
        <inlineHelpText>Checked if the applicant confirmed age 21+ (only relevant on 21+ gives)</inlineHelpText>
        <label>Confirmed 21+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID_plus_Give_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A workflow sets this value in order to prevent more than one Give Request with confirmation stage for the same Give and Applicant.</description>
        <inlineHelpText>A workflow sets this value in order to prevent more than one Give Request with confirmation stage for the same Give and Applicant.</inlineHelpText>
        <label>Contact ID plus Give ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_First_Emailed__c</fullName>
        <description>This field is used to indicate the date that the first email was sent to the user for a re-confirmation.</description>
        <inlineHelpText>This field is used to indicate the date that the first email was sent to the user for a re-confirmation.</inlineHelpText>
        <label>Date First Emailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Emailed__c</fullName>
        <description>This field is used to indicate the date that the last email was sent to the user for a re-confirmation.</description>
        <inlineHelpText>This field is used to indicate the date that the last email was sent to the user for a re-confirmation.</inlineHelpText>
        <label>Date Last Emailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mismatch__c</fullName>
        <description>This field is set to &quot;TRUE&quot; when the Date Created of the give request is later than the app deadline or end date. It was created to help catch requests coming in late for closed gives.</description>
        <formula>if(not(isblank(Give_Instance__r.Application_Deadline__c)), if(datevalue(CreatedDate)  &gt; Give_Instance__r.Application_Deadline__c ,&quot;TRUE&quot;,&quot;&quot;),

 if(not(isblank(  Give_Instance__r.End_Date__c  )),if(datevalue(CreatedDate)  &gt;  Give_Instance__r.End_Date__c,&quot;TRUE&quot;,&quot;&quot;),&quot;&quot;)

)</formula>
        <inlineHelpText>This field is set to &quot;TRUE&quot; when the Date Created of the give request is later than the app deadline or end date. It was created to help catch requests coming in late for closed gives.</inlineHelpText>
        <label>Date Mismatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Re_confirm__c</fullName>
        <label>Date re-confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FOR_REPORT_Attended__c</fullName>
        <formula>IF(ISPICKVAL(Attended__c, &quot;Yes&quot;), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOR_REPORT_Attended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOR_REPORT_Branch__c</fullName>
        <formula>IF(ISPICKVAL(Applicant__r.Branch_of_Service__c, &quot;Army&quot;), &quot;Army&quot;, &quot;None&quot;) &amp; IF(ISPICKVAL(Applicant__r.Branch_of_Service__c, &quot;Air Force&quot;), &quot;Air Force&quot;, &quot;None&quot;) &amp; IF(ISPICKVAL(Applicant__r.Branch_of_Service__c, &quot;Navy&quot;), &quot;Navy&quot;, &quot;None&quot;) &amp; 
IF(ISPICKVAL(Applicant__r.Branch_of_Service__c, &quot;Marines&quot;), &quot;Marines&quot;, &quot;None&quot;) &amp; 
IF(ISPICKVAL(Applicant__r.Branch_of_Service__c, &quot;Coast Guard&quot;), &quot;Coast Guard&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOR_REPORT_Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOR_REPORT_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOR_REPORT_DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FOR_REPORT_Rank__c</fullName>
        <formula>case(left(text(Applicant__r.Rank__c),1),&quot;E&quot;,&quot;Enlisted&quot;,&quot;O&quot;,&quot;Officer&quot;,&quot;none&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOR_REPORT_Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Give Requests</relationshipLabel>
        <relationshipName>Geocode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_Descriptor__c</fullName>
        <formula>Give_Instance__r.Give__r.Descriptor__c</formula>
        <label>Give Descriptor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give_Fulfillment_Instructions__c</fullName>
        <formula>Give_Instance__r.Give__r.Fulfillment_Instructions_for_Winner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Give Fulfillment Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give_Fulfillment_Instructions_rtf__c</fullName>
        <description>These instructions will be sent as soon as the member is confirmed for the reward (immediately for some rewards, upon selection for others).</description>
        <inlineHelpText>These instructions will be sent as soon as the member is confirmed for the reward (immediately for some rewards, upon selection for others). Note this is now a Rich Text Field that can accept links and formatting.</inlineHelpText>
        <label>Give Fulfillment Instructions rtf</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Give_Instance_Reconfirm_Date__c</fullName>
        <formula>Give_Instance__r.Reconfirm_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Give Instance Reconfirm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Give_Instance_Start_Date__c</fullName>
        <formula>Give_Instance__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Give Instance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Give_Instance_Start_Time__c</fullName>
        <formula>Give_Instance__r.Start_Time__c</formula>
        <label>Give Instance Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give_Instance__c</fullName>
        <label>Give Instance</label>
        <referenceTo>Give_Instance__c</referenceTo>
        <relationshipLabel>Give Requests</relationshipLabel>
        <relationshipName>Give_Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Give_Name__c</fullName>
        <formula>Give_Instance__r.Give__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Give Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_s_21_and_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to indicate that the member has indicated that guest(s) are 21 and over.</description>
        <inlineHelpText>This field will be used to indicate that the member has indicated that guest(s) are 21 and over.</inlineHelpText>
        <label>Guest(s) 21 and Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_Address_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Address Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_Email_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when user requests that their email address become the primary email on the account</description>
        <inlineHelpText>Checked when user requests that their email address become the primary email on the account</inlineHelpText>
        <label>Make Email Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_Phone_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if user wanted Phone number on Give Request to be primary phone number on record.</description>
        <inlineHelpText>Checked if user wanted Phone number on Give Request to be primary phone number on record.</inlineHelpText>
        <label>Make Phone Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_DL_Num__c</fullName>
        <label>Member DL Num</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_DOB__c</fullName>
        <label>Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Shirt_Size__c</fullName>
        <label>Member Shirt Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Confirmed_Give_Requests__c</fullName>
        <formula>Applicant__r.Num_Confirmed_Give_Requests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Conf Give Reqs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Device_Model__c</fullName>
        <description>Model of device where the request originated</description>
        <inlineHelpText>Model of device where the request originated</inlineHelpText>
        <label>Platform Device Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Device_OS__c</fullName>
        <description>Device OS where the request originated.</description>
        <inlineHelpText>Device OS where the request originated.</inlineHelpText>
        <label>Platform Device OS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Version__c</fullName>
        <description>E.g. mobile phone app version where the request originated.</description>
        <inlineHelpText>E.g. mobile phone app version where the request originated.</inlineHelpText>
        <label>Platform Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>On which Rucksack platform did this request originate?</description>
        <inlineHelpText>On which Rucksack platform did this request originate?</inlineHelpText>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>iPhone app</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Re_confirm_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will be used to indicate how many times a re-confirmation email has been sent to the user.</description>
        <inlineHelpText>Count how many times re-confirm email has been sent)</inlineHelpText>
        <label>Re-confirm Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_confirm_Status__c</fullName>
        <label>Re-confirm Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Re-confirm sent</fullName>
                </value>
                <value>
                    <fullName>Re-confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reconfirm_Info_from_Instance__c</fullName>
        <description>The &quot;Reconfirm Info to Send&quot; field from the Give Instance.</description>
        <formula>Give_Instance__r.Reconfirm_Info_to_Send__c</formula>
        <inlineHelpText>The &quot;Reconfirm Info to Send&quot; field from the Give Instance.</inlineHelpText>
        <label>Reconfirm Info from Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_Response_2__c</fullName>
        <label>Special Response #2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Response_3__c</fullName>
        <label>Special Response #3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Response_4__c</fullName>
        <label>Special Response #4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Response__c</fullName>
        <description>If Give required special response it is stored here.</description>
        <inlineHelpText>If Give required special response it is stored here.</inlineHelpText>
        <label>Special Response #1 (at request)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Give requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Wait-list</fullName>
                </value>
                <value>
                    <fullName>Tentative confirmation</fullName>
                </value>
                <value>
                    <fullName>Final confirmation</fullName>
                </value>
                <value>
                    <fullName>Information sent</fullName>
                </value>
                <value>
                    <fullName>Info requested of member</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Was_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Terms and Conditions were displayed on the give, this box is checked if the user checked the Terms box (required) when submitting the request.</description>
        <inlineHelpText>If Terms and Conditions were displayed on the give, this box is checked if the user checked the Terms box (required) when submitting the request.</inlineHelpText>
        <label>Terms Was Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units_Requested__c</fullName>
        <label>Units Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_State__c</fullName>
        <formula>IF(CONTAINS(TEXT( State__c ), Give_Instance__r.Give__r.City__c ), &quot;In State&quot;, &quot;Out of State&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verify State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Give Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Give_Name__c</columns>
        <columns>Units_Requested__c</columns>
        <columns>Give_Instance__c</columns>
        <columns>City__c</columns>
        <columns>Stage__c</columns>
        <columns>Address__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_This_Month</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Give_Name__c</columns>
        <columns>Units_Requested__c</columns>
        <columns>Give_Instance__c</columns>
        <columns>Stage__c</columns>
        <columns>Special_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All This Month</label>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_Tentative</fullName>
        <columns>NAME</columns>
        <columns>Give_Instance__c</columns>
        <columns>Applicant__c</columns>
        <columns>City__c</columns>
        <columns>Stage__c</columns>
        <columns>Address__c</columns>
        <columns>Units_Requested__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Tentative confirmation</value>
        </filters>
        <label>All Upcoming Tentative</label>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_Waitlisted</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>City__c</columns>
        <columns>Stage__c</columns>
        <columns>Address__c</columns>
        <columns>Units_Requested__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Wait-list</value>
        </filters>
        <label>All Upcoming Waitlisted</label>
    </listViews>
    <listViews>
        <fullName>Armed_Forces_Ball_Requesters</fullName>
        <columns>Stage__c</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>Applicant_Email__c</columns>
        <columns>Give_Name__c</columns>
        <columns>State__c</columns>
        <columns>Special_Response__c</columns>
        <columns>Special_Response_2__c</columns>
        <columns>Special_Response_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Give_Name__c</field>
            <operation>equals</operation>
            <value>Tickets to the Armed Forces Inauguration Ball 2017</value>
        </filters>
        <label>Armed Forces Ball Requesters</label>
    </listViews>
    <listViews>
        <fullName>Give_Requests_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Give_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Give Requests Created Today</label>
    </listViews>
    <listViews>
        <fullName>Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Give_Instance__c</columns>
        <columns>Give_Name__c</columns>
        <columns>Platform__c</columns>
        <filterScope>Everything</filterScope>
        <label>Requests</label>
    </listViews>
    <listViews>
        <fullName>iPhone_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Give_Instance__c</columns>
        <columns>Give_Name__c</columns>
        <columns>Platform__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Platform__c</field>
            <operation>equals</operation>
            <value>iPhone app</value>
        </filters>
        <label>iPhone Requests</label>
    </listViews>
    <nameField>
        <displayFormat>GR-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Give Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Give Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Available_Quantity_Check</fullName>
        <active>true</active>
        <description>If stage is being set to Tentative or Final Conf, check whether enough units remaining before allowing.  Exception is when request was already tentatively or final conf so the spot is held, or when moving someone up from waitlist.</description>
        <errorConditionFormula>AND(
 or (
    ispickval(Give_Instance__r.Give__r.Type__c, &quot;First Come First Served&quot;),
    ispickval(Give_Instance__r.Give__r.Type__c, &quot;Screened Give&quot;)
 ),
 or(
   ISPICKVAL( Stage__c ,&quot;Final confirmation&quot;),
   ISPICKVAL( Stage__c ,&quot;Tentative confirmation&quot;)
 ),
 not(ISPICKVAL(PRIORVALUE(Stage__c), &quot;Tentative confirmation&quot;)),
 not(ISPICKVAL(PRIORVALUE(Stage__c), &quot;Final confirmation&quot;)),
 not(
   and(ISPICKVAL(PRIORVALUE(Stage__c), &quot;Wait-list&quot;),
    Give_Instance__r.Tentative_Number_Remaining__c &gt; 0
   )
 ),
 Give_Instance__r.Number_of_Units__c &gt; 0,
 Give_Instance__r.Number_Remaining__c &lt; Units_Requested__c 
)</errorConditionFormula>
        <errorMessage>Sorry, the available quantity left was exceeded with this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_21_and_over</fullName>
        <active>true</active>
        <description>checks whether 21+ was checked if it&apos;s a 21+ give</description>
        <errorConditionFormula>and(
Give_Instance__r.Give__r.Must_be_21__c == true,
Confirmed_21__c != true,
not(ispickval(Stage__c, &quot;Denied&quot;)),
not(ispickval(Stage__c, &quot;Info requested of member&quot;)),
not(ispickval(Stage__c, &quot;Ineligible&quot;))
)</errorConditionFormula>
        <errorMessage>Sorry, this reward is for age 21 and up only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Guest_21_and_over</fullName>
        <active>true</active>
        <description>checks whether guests 21+ was checked if it&apos;s a 21+ give</description>
        <errorConditionFormula>and(
Units_Requested__c &gt; 1,
Give_Instance__r.Give__r.Must_be_21_for_guest__c == true,
Guest_s_21_and_Over__c != true,
not(ispickval(Stage__c, &quot;Denied&quot;)),
not(ispickval(Stage__c, &quot;Info requested of member&quot;)),
not(ispickval(Stage__c, &quot;Ineligible&quot;))
)</errorConditionFormula>
        <errorMessage>Sorry, guests must be age 21 and up only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Blocked_check</fullName>
        <active>true</active>
        <description>Checks whether the contact&apos;s Rucksack Status is blocked</description>
        <errorConditionFormula>ISPICKVAL(Applicant__r.Rucksack_Status__c, &quot;Blocked&quot;)</errorConditionFormula>
        <errorMessage>Sorry, your request was not accepted.  Please contact rucksack@iava.org if you have questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_units_requested_field</fullName>
        <active>true</active>
        <description>Requires member to request a number of units if Give requires it.</description>
        <errorConditionFormula>and(
isblank(Units_Requested__c),  
not(Give_Instance__r.Give__r.Member_Cannot_Select_Quantity__c), 
 Give_Instance__r.Give__r.Maximum_Units_per_Member__c &gt; 1
)</errorConditionFormula>
        <errorDisplayField>Units_Requested__c</errorDisplayField>
        <errorMessage>Please request a number of units/tickets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_field_is_not_blank</fullName>
        <active>true</active>
        <description>If state field is blank, don&apos;t allow record to be saved</description>
        <errorConditionFormula>and( Give_Instance__r.Give__r.Collect_Mailing_Address__c , ispickval(State__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Please select your State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Terms_and_Conditions_not_checked</fullName>
        <active>true</active>
        <description>If the give requires the user check the Terms and Conditions box, then require it by jove.</description>
        <errorConditionFormula>and( 
  Give_Instance__r.Give__r.Show_Terms_and_Conditions__c , 
  Give_Instance__r.Give__r.Terms_and_Conditions__c != null, 
  not(Terms_Was_Checked__c) 
)</errorConditionFormula>
        <errorMessage>Please check the Terms and Conditions box at the bottom to indicate that you agree.</errorMessage>
    </validationRules>
</CustomObject>